fixed issue where scrollbar was causing margin errors on dashboard

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 h4 {
   text-align: center; }
 
+html {
+  overflow-y: scroll; }
+
 /*# sourceMappingURL=main.css.map */
